# code-graph-rag

./: .env.example  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  BENCHMARK_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.builder  Dockerfile.memgraph  IMPLEMENTATION_PLAN_ROOTLESS_FIX.md  LICENSE  Makefile  NEWS.md  PRIORITIZED_SCORECARD.md  PYPI_README.md  README.md  SECURITY.md  TODO.md  benchmark_file_editor.py  build_binary.py  code-graph-rag-darwin-arm64.spec  docker-compose.yaml  dummy.txt  funding.json  graph-code-darwin-arm64.spec  graph-code.spec  main.py  memgraph-entrypoint.sh  mkdocs.yml  nl_query.py  pyproject.toml  realtime_updater.py  repo_parser.py  server.json  sonar-project.properties  test_treesitter_operators.py
.github/: FUNDING.yml  SECURITY.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  question.md  question.yml  todo.md
.github/workflows/: auto-review-comments.yml  build-binaries.yml  ci.yml  claude-code-review.yml  docker-publish.yml  docs.yml  label-sync.yml  osv-scanner.yml  poor-quality-auto-close.yml  poor-quality-label-comment.yml  poor-quality-management.yml  publish.yml  scorecard.yml  sonarcloud.yml  split-score.yml  version-bump.yml
.qdrant_code_embeddings/: meta.json
benchmarks/: bench_ast_cache.py  bench_dropin_replacements.py  bench_embedding_cache.py  bench_file_hashing.py  bench_find_ending_with_fix.py  bench_graph_loader.py  bench_json_serialization.py  bench_pathlib_vs_string.py  bench_string_ops.py  bench_trie.py  run_all.py
benchmarks/results/: bench_ast_cache_20260315_000043.txt  bench_file_hashing_20260315_000043.txt  bench_json_serialization_20260315_000043.txt  bench_string_ops_20260315_000043.txt  bench_trie_20260315_000043.txt
codebase_rag/: __init__.py  api.py  ast_cache.py  capture.py  cgr_state.py  chat_schemas.py  cli.py  cli_help.py  config.py  constants.py  cypher_queries.py  dead_code.py  decorators.py  delete_later.txt  deps.py  embedder.py  errors.py  exceptions.py  function_registry.py  graph_audit.py  graph_loader.py  graph_updater.py  language_config.py  language_spec.py  logs.py  main.py  models.py  parser_fingerprint.py  parser_loader.py  path_filters.py  prompts.py  readme_sections.py  schemas.py  tool_errors.py  types_defs.py  unixcoder.py  vector_store.py
codebase_rag/analyzers/: __init__.py  ast_grep_analyzer.py
codebase_rag/constants/: __init__.py  ast_cpp.py  ast_csharp.py  ast_dart.py  ast_go.py  ast_java.py  ast_js.py  ast_lua.py  ast_nodes.py  ast_php.py  ast_python.py  ast_rust.py  ast_scala.py  build.py  cli.py  core.py  deadcode_roots.py  deps.py  fqn_specs.py  graph.py  health.py  lang_tooling.py  languages.py  mcp.py  operators.py  providers.py  security.py  stdlib_types.py  structural.py
codebase_rag/mcp/: __init__.py  client.py  server.py  tool_descriptions.py  tools.py  types_defs.py
codebase_rag/parsers/: __init__.py  api_schema_parser.py  ast_grep_tier.py  call_processor.py  call_resolver.py  class_ingest.py  constants.py  contract_linking.py  contracts.py  cpp_utils.py  cross_service_linker.py  definition_processor.py  dependency_parser.py  dispatch_registry.py  endpoint_prefixes.py  endpoint_routes.py  endpoints.py  export_detection.py  factory.py  function_ingest.py  http_call_detector.py  import_processor.py  java_method_resolver.py  java_type_inference.py  java_type_resolver.py  java_utils.py  java_variable_analyzer.py  js_ts_ingest.py  js_ts_module_system.py  js_type_inference.py  js_utils.py  lua_type_inference.py  lua_utils.py  python_source_roots.py  python_utils.py  rpc_exposure.py  rust_utils.py  stdlib_extractor.py  structure_processor.py  tags_crossvalidate.py  (+3 more)
codebase_rag/providers/: base.py  interface.py  litellm.py
codebase_rag/services/: __init__.py  anthropic_token_counter.py  chat_orchestrator.py  filtering.py  graph_db.py  graph_service.py  llm.py  protobuf_service.py  resource_cleanup.py  usage_cost.py
codebase_rag/stack/: __init__.py  cli.py  constants.py  health.py  manager.py
codebase_rag/tests/: conftest.py  test_absolute_path.py  test_abstract_method_override_resolution.py  test_anthropic_token_counter.py  test_api_schema_parser.py  test_ast_cache_eviction_calls.py  test_ast_grep_analyzer.py  test_ast_grep_service.py  test_ast_grep_tier.py  test_background_task_retention.py  test_build_binary.py  test_build_cache_dirs_ignored.py  test_c_language.py  test_c_retrieval_eval.py  test_cacheless_lookup_failure.py  test_call_fallback_scoping.py  test_call_processor.py  test_call_processor_integration.py  test_call_resolver.py  test_callable_field_calls.py  test_callable_flow_tracing.py  test_callable_flow_tracing_cpp.py  test_callable_flow_tracing_go.py  test_callable_flow_tracing_js.py  test_callback_reference_edges.py  test_cancel_orphaned_tool_calls.py  test_capture_end_to_end.py  test_capture_macro_calls.py  test_capture_resolver.py  test_cgr_instructions.py  test_cgrignore.py  (+568 more)
codec/: schema.proto  schema_pb2.py  schema_pb2.pyi
docs/: HOW_TO_RUN.md  LLM_CONFIGURATION.md  QDRANT_ANALYSIS.md  SUPPORTED_PROVIDERS.md  TODO.md  claude-code-setup.md  contributing.md  index.md
evals/: README.md  __init__.py  ast_oracle.py  c_retrieval.py  calls_trace.py  cgr_graph.py  cli.py  constants.py  cpp_l1.py  cpp_retrieval.py  cross_project.py  csharp_l1.py  csharp_retrieval.py  dead_code.py  go_l1.py  go_retrieval.py  import_resolution.py  incremental.py  inheritance.py  instantiation.py  java_l1.py  java_retrieval.py  js_l1.py  js_retrieval.py  l3.py  logs.py  lua_l1.py  lua_retrieval.py  module_calls.py  php_l1.py  php_retrieval.py  polyglot.py  retrieval.py  rust_l1.py  rust_retrieval.py  scala_retrieval.py  score.py  semantic_search.py  static_calls.py  structure_report.py  (+3 more)
examples/: graph_export_example.py
optimize/: code_to_text.sh  memory_profile.py  memory_profile_results.json  profile_io.py  tree-sitter.txt
scripts/: build_binary.py  check_comments.py  check_no_docs.py  create_labels.py  generate_readme.py  release.sh
tests/: test_cross_project_access.py
(+282 files in other folders)
